MOOC CRDA: partners update

--- a/website/02-Education/moocs/crda/02-partners.html
+++ b/website/02-Education/moocs/crda/02-partners.html
@@ -1,35 +1,44 @@
-<p class="margin_bottom_20">In addition to the experts and lecturers featuring in the MOOC in their personal capacity, the following institutions and organisations have kindly agreed to be part of this MOOC project: </p>
-
+<p class="subtitle_page_programme">Partners</p>
+<p class="margin_bottom_60">In addition to the experts and lecturers featuring in the MOOC in their personal capacity, the following institutions and organisations have kindly agreed to be part of this MOOC project: </p>
 <div class="table_partners no_margin_bottom">
-<div class="table_partners_cell">
-<div class="container_logo_partner"><a href="https://simaawards.org/" target="_blank"><img class="logo_partner grayscale" src="files/eiuc/sima.jpg" alt="logo regione veneto"></a></div>
-<p>SIMA Awards</p>
+    <div class="table_partners_cell">
+        <div class="container_logo_partner"><a href="https://www.bangor.ac.uk/" target="_blank"><img class="logo_partner grayscale" src="files/eiuc/mooc-crda/partners/Bangor%20Uni.jpg" alt="Bangor University Logo"></a></div>
+        <p>Bangor University</p>
+    </div>
+    <div class="table_partners_cell">
+        <div class="container_logo_partner"><a href="https://www.childsafenet.org/who-we-are"><img class="logo_partner grayscale" src="files/eiuc/mooc-crda/partners/childsafe.jpg" alt="ChildSafeNet logo"></a></div>
+        <p>ChildSafeNet</p>
+    </div>
+    <div class="table_partners_cell">
+        <div class="container_logo_partner"><a href="https://www.derechosdigitales.org/"><img class="logo_partner grayscale" src="files/eiuc/mooc-crda/partners/derechos-digitales.jpg" alt="Derechos Digitales logo"></a></div>
+        <p>Derechos Digitales</p>
+    </div>
+    <div class="table_partners_cell">
+        <div class="container_logo_partner"><a href="https://emotionalai.org/" target="_blank"><img class="logo_partner grayscale" src="files/eiuc/mooc-crda/partners/the_emotional_lab.jpg" alt="Emotional AI Lab logo"></a></div>
+        <p>Emotional AI Lab</p>
+    </div>
+    <div class="table_partners_cell">
+        <div class="container_logo_partner"><a href="https://medicalfuturist.com/" target="_blank"><img class="logo_partner grayscale" src="files/eiuc/mooc-crda/partners/MedicalFuturistInstitute.jpg" alt="Medical Futurist Institute logo"></a></div>
+        <p>Medical Futurist Institute</p>
+    </div>
+    <div class="table_partners_cell">
+        <div class="container_logo_partner"><a href="https://mijente.net/" target="_blank"><img class="logo_partner grayscale" src="files/eiuc/mooc-crda/partners/Mijente.jpg" alt="Mijente logo"></a></div>
+        <p>Mijente</p>
+    </div>
+    <div class="table_partners_cell">
+        <div class="container_logo_partner"><a href="https://www.pixelarium.com.mx/" target="_blank"><img class="logo_partner grayscale" src="files/eiuc/mooc-crda/partners/pixelarium.jpg" alt="Pixelarium logo"></a></div>
+        <p>Pixelarium</p>
+    </div>
+    <div class="table_partners_cell">
+        <div class="container_logo_partner"><a href="https://www5.usp.br/" target="_blank"><img class="logo_partner grayscale" src="files/eiuc/mooc-crda/partners/usp.jpg" alt="University of São Paulo logo"></a></div>
+        <p>University of São Paulo</p>
+    </div>
+    <div class="table_partners_cell table_partners_cell_vuota space">[nbsp]</div>
 </div>
-<div class="table_partners_cell">
-<div class="container_logo_partner"><a href="https://act-responsible.org/"><img class="logo_partner grayscale" src="files/eiuc/logo_act_responsible.jpg" alt="logo council europe"></a></div>
-<p>ACT Responsible</p>
-</div>
-<div class="table_partners_cell">
-<div class="container_logo_partner"><a href="http://www.vitainternational.media/en/"><img class="logo_partner grayscale" src="files/eiuc/logo_vita_international.jpg" alt="logo citta venezia"></a></div>
-<p>VITA Magazine</p>
-</div>
-<div class="table_partners_cell">
-<div class="container_logo_partner"><a href="https://evpa.eu.com/" target="_blank"><img class="logo_partner grayscale" src="files/eiuc/evpa.jpg" alt="logo regione veneto"></a></div>
-<p>EVPA</p>
-</div>
-<div class="table_partners_cell">
-<div class="container_logo_partner"><a href="http://www.unaff.org" target="_blank"><img class="logo_partner grayscale" src="files/eiuc/unaff.jpg" alt="logo UNAFF"></a></div>
-<p>UNAFF</p>
-</div>
-<div class="table_partners_cell">
-<div class="container_logo_partner"><a href="https://www.elsa-italy.org/" target="_blank"><img class="logo_partner grayscale" src="files/eiuc/elsa-italia-site.png" alt="logo ELSA Ialy"></a></div>
-<p>ELSA Italia</p>
-</div>
-<div class="table_partners_cell">
-<div class="container_logo_partner"><a href="https://www.iapss.org/" target="_blank"><img class="logo_partner grayscale" src="files/eiuc/iapss-site.png" alt="logo IAPSS"></a></div>
-<p>ELSA Italia</p>
-</div>
-<div class="table_partners_cell table_partners_cell_vuota space">[nbsp]</div>
-<div class="table_partners_cell table_partners_cell_vuota space">[nbsp]</div>
-<div class="table_partners_cell table_partners_cell_vuota space">[nbsp]</div>
-</div>
+<style>
+	.logo_partner {
+    max-width: 250px;
+    max-height: 250px;
+    height: auto;
+}
+</style>
